# ssau

./: .directory  .gitignore  README.md
Basic Of Translation Language Of Programming/: .directory
Basic Of Translation Language Of Programming/OT_lp1/: CMakeLists.txt  main.cpp
Basic Of Translation Language Of Programming/OT_lp2/: CMakeLists.txt  main.cpp  t.txt
Basic Of Translation Language Of Programming/resources/: LinkedList.cpp  MyClasses.h  MyVector.cpp  WFStreamExecutor.cpp
DataBase/: lab_2.sql  lab_3.sql  lab_3_script.sql  lab_4.sql  lab_5.sql  lab_6.sql  lab_7.sql  lab_8.sql
DataBase/lab_9/: pom.xml
Language And Metodhs Of Programming/lp3/: CMakeLists.txt  main.cpp
Language And Metodhs Of Programming/lp4/: CMakeLists.txt  main.cpp
OT_lp1/: main.cpp
OT_lp2/: main.cpp
Operating Systems/Lab_1/: CMakeLists.txt  linux_commands.sh  test.sh
Operating Systems/Lab_1/headers/: GeneralHeader.h  Polynom.h  PolynomResolver.h  Root.h  polynom.h
Operating Systems/Lab_1/helpers/: Executor.cpp  MyVector.cpp
Operating Systems/Lab_1/sources/: Polynom.cpp  PolynomResolver.cpp  Root.cpp  polynom.cpp
Operating Systems/Lab_1/tests/: PolynomResolverTest.cpp
SummerEducationalPractice/: ImageTransformer.py  Test.ipynb
lp1/: CMakeLists.txt  main.cpp
lp2/: CMakeLists.txt  main.cpp
lp3/: main.cpp
lp4/: main.cpp
lp5/: BrokenLine.cpp  BrokenLine.h  CMakeLists.txt  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  main.cpp
resources/: Executor.cpp  LexicalAnalyzer.cpp  LinkedList.cpp  MyClasses.h  MyVector.cpp  Test.cpp
(+347 files in other folders)
